:hearts: add switch

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -4,5 +4,9 @@
     "common.action_refresh": "Refresh",
     "common.action_cancel": "Cancel",
     "common.general_error": "An error occurred. We will record and fix this issue soon.",
-    "home.page_title": "Home"
+    "home.page_title": "Home",
+    "home.input_email_title": "Email",
+    "home.input_email_placeholder": "Input your Email.",
+    "home.input_email_empty": "Please input your Email.",
+    "home.floating_input_email_message_error_invalid_email": "Wrong email format."
 }
