--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -4,6 +4,9 @@
     "common.action_refresh": "Refresh",
     "common.action_cancel": "Cancel",
     "common.general_error": "An error occurred. We will record and fix this issue soon.",
+    "common.notification": "Notification",
+    "common.theme_mode": "Dark mode",
+    "common.language": "Language",
     "common.language.en": "English",
     "common.language.vi": "Vietnamese",
     "home.page_title": "Home",
