--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -4,6 +4,9 @@
     "common.action_refresh": "Tải lại",
     "common.action_cancel": "Huỷ",
     "common.general_error": "Đã có lỗi xảy ra trong quá trình xử lý. Chúng tôi sẽ ghi nhận và sẽ khắc phục sớm.",
+    "common.notification": "Thông báo",
+    "common.theme_mode": "Chủ đề",
+    "common.language": "Ngôn ngữ",
     "common.language.en": "Tiếng Anh",
     "common.language.vi": "Tiếng Việt",
     "home.page_title": "Trang chủ",
