:hearts:  splash screen for app

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">love_story_typescript</string>
+    <string name="splash_screen">SplashScreen</string>
 </resources>
