--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -13,6 +13,8 @@
     "common.language.vi": "Tiếng Việt",
     "login.page_title": "Đăng nhập",
     "pin_code.page_title": "Mã xác thực",
+    "pin_code.did_not_receive_label": "Không nhận được?",
+    "pin_code.resend_label": "Gửi lại trong {time}",
     "home.page_title": "Trang chủ",
     "home.input_email_title": "Email",
     "home.input_email_placeholder": "Hãy nhập email",
