--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -26,6 +26,7 @@
     "chat.tab_active_title": "Hoạt động",
     "chat.search_label": "Tìm kiếm cuộc trò chuyện",
     "chat.tab_archived_title": "Lưu trữ",
+    "profile.page_title": "Hồ sơ cá nhân",
     "message.page_title": "Tin nhắn",
     "message.input_text_placeholder": "Tin nhắn của bạn..."
 }
