--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -11,6 +11,10 @@
     "common.language": "Ngôn ngữ",
     "common.language.en": "Tiếng Anh",
     "common.language.vi": "Tiếng Việt",
+    "connection_banner.connected": "Kết nối đã được khôi phục",
+    "connection_banner.connecting": "Đang kết nối...",
+    "connection_banner.not_connected": "Không có kết nối internet",
+    "connection_banner.not_reachable": "Máy chủ không thể kết nối",
     "login.page_title": "Đăng nhập",
     "pin_code.page_title": "Mã xác thực",
     "pin_code.did_not_receive_label": "Không nhận được?",
