--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -11,6 +11,10 @@
     "common.language": "Language",
     "common.language.en": "English",
     "common.language.vi": "Vietnamese",
+    "connection_banner.connected": "Connection restored",
+    "connection_banner.connecting": "Connecting...",
+    "connection_banner.not_connected": "No internet connection",
+    "connection_banner.not_reachable": "The server is not reachable",
     "login.page_title": "Login",
     "pin_code.page_title": "Verification Code",
     "pin_code.did_not_receive_label": "Didn't receive?",
